--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Vote For BJP</h1>
-<h1>Vote For Nation India..!!!</h1>
+<h1>Vote For Nation India....!!!</h1>
 <h3> Abki baar 400 paar..!!</h3>
 
 <button>Click here</button>
